--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:css": "start tailwindcss -i ./styles/input.css -o ./styles/globals.css --watch",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -12,11 +13,16 @@
     "@types/node": "18.11.10",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "bootstrap": "^5.2.3",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sass": "^1.56.1",
     "typescript": "4.9.3"
+  },
+  "devDependencies": {
+    "@types/bootstrap": "^5.2.6"
   }
 }
