--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "dev:css": "start tailwindcss -i ./styles/input.css -o ./styles/globals.css --watch",
+    "dev:css": "tailwindcss -i ./styles/input.css -o ./styles/globals.css --watch",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -16,9 +16,12 @@
     "bootstrap": "^5.2.3",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.5",
+    "firebase": "^9.14.0",
+    "framer-motion": "^7.6.19",
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-loading-skeleton": "^3.1.0",
     "sass": "^1.56.1",
     "typescript": "4.9.3"
   },
