--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-config-next": "13.0.5",
     "firebase": "^9.14.0",
     "framer-motion": "^7.6.19",
+    "hamburger-react": "^2.5.0",
     "next": "13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
